// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inline Newsletter Puff Clicking Subscribe renders 'saving' when the button is clicked 1`] = `
<body>
  <div>
    <div
      class="sc-bdVaJa sc-htpNat bSdOkq"
    >
      <div
        class="sc-bdVaJa sc-bxivhb fstdFq"
      >
        <div
          class="css-view-1dbjc4n"
        >
          <div
            style="display: table; height: 0px; overflow: hidden; position: relative; width: 100%; padding-bottom: 70.42253521126761%;"
          >
            <img
              class="responsiveweb-sc-142djdt-0 jYhpic"
              src="https://nuk-tnl-deck-prod-static.s3-eu-west-1.amazonaws.com/uploads/2aa9050e6c3d4de682f11a4802ebba96.jpg"
            />
            <div
              class="css-view-1dbjc4n"
              style="align-items: center; background-color: rgb(237, 237, 237); bottom: 0px; justify-content: center; left: 0px; position: absolute; right: 0px; top: 0px; z-index: 0;"
            >
              <svg
                height="auto"
                style="max-width: 25%; max-height: 50%;"
                version="1.1"
                viewBox="145 50 108 120"
                width="100%"
              >
                <g
                  fill="none"
                  fill-rule="evenodd"
                  stroke="none"
                  stroke-width="1"
                >
                  <path
                    d="M211.26076,54 L211.231367,54 L147.67512,54 L145,85.7081465 L146.922096,86.4489102 C146.922096,86.4489102 164.867589,68.1355181 168.301115,65.0001546 C171.728017,61.8689133 174.237132,61.0885763 176.436179,60.3527593 C180.998206,59.169681 185.977937,59.2150255 185.977937,59.2150255 L186.109581,59.2150255 L186.109581,156.560932 L169.259886,164.473953 L169.259886,166 L228.735147,166 L228.735147,164.473953 L211.889177,156.560932 L211.889177,59.2150255 L212.01751,59.2150255 C212.01751,59.2150255 216.992272,59.169681 221.558854,60.3527593 C223.757072,61.0885763 226.266601,61.8689133 229.691848,65.0001546 C233.130341,68.1355181 251.071695,86.4489102 251.071695,86.4489102 L253,85.7081465 L250.317842,54 L211.270695,54 L211.242545,54"
                    fill="#FFFFFF"
                  />
                </g>
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-bdVaJa sc-bZQynM dZCUeH"
      >
        <div
          class="sc-bwzfXH sc-gzVnrw fwTOvg"
        >
          STRAIGHT IN YOUR INBOX
        </div>
        <div
          class="sc-bwzfXH sc-htoDjs epVajn"
        >
          Politics. Explained.
        </div>
        <div
          class="sc-bwzfXH sc-dnqmqq icKJfC"
        >
          Sign up to receive our brilliant Red Box newsletter, Matt Chorley\`s poke at politics delivered every weekday morning at 8am.
        </div>
        <div
          class="sc-bdVaJa sc-iwsKbI beJMRD"
        >
          <button
            style="font-family: GillSansMTStd-Medium; font-size: 16px; line-height: 0; align-items: center; background-color: transparent; border-radius: 2px; color: rgb(29, 29, 27); cursor: pointer; height: 45px; justify-content: center; min-width: 100px; padding-top: 4px; width: 100%; border-color: #1d1d1b; border-style: solid; border-width: 2px; elevation: 0; letter-spacing: 0.2px;"
            type="button"
          >
            Saving…
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Inline Newsletter Puff Manage preferences  renders the success view after subscribing  1`] = `
<body>
  <div>
    <div
      class="sc-bdVaJa sc-htpNat bSdOkq"
    >
      <div
        class="sc-bdVaJa sc-bxivhb fstdFq"
      >
        <div
          class="css-view-1dbjc4n"
        >
          <div
            style="display: table; height: 0px; overflow: hidden; position: relative; width: 100%; padding-bottom: 70.42253521126761%;"
          >
            <img
              class="responsiveweb-sc-142djdt-0 jYhpic"
              src="https://nuk-tnl-deck-prod-static.s3-eu-west-1.amazonaws.com/uploads/2aa9050e6c3d4de682f11a4802ebba96.jpg"
            />
            <div
              class="css-view-1dbjc4n"
              style="align-items: center; background-color: rgb(237, 237, 237); bottom: 0px; justify-content: center; left: 0px; position: absolute; right: 0px; top: 0px; z-index: 0;"
            >
              <svg
                height="auto"
                style="max-width: 25%; max-height: 50%;"
                version="1.1"
                viewBox="145 50 108 120"
                width="100%"
              >
                <g
                  fill="none"
                  fill-rule="evenodd"
                  stroke="none"
                  stroke-width="1"
                >
                  <path
                    d="M211.26076,54 L211.231367,54 L147.67512,54 L145,85.7081465 L146.922096,86.4489102 C146.922096,86.4489102 164.867589,68.1355181 168.301115,65.0001546 C171.728017,61.8689133 174.237132,61.0885763 176.436179,60.3527593 C180.998206,59.169681 185.977937,59.2150255 185.977937,59.2150255 L186.109581,59.2150255 L186.109581,156.560932 L169.259886,164.473953 L169.259886,166 L228.735147,166 L228.735147,164.473953 L211.889177,156.560932 L211.889177,59.2150255 L212.01751,59.2150255 C212.01751,59.2150255 216.992272,59.169681 221.558854,60.3527593 C223.757072,61.0885763 226.266601,61.8689133 229.691848,65.0001546 C233.130341,68.1355181 251.071695,86.4489102 251.071695,86.4489102 L253,85.7081465 L250.317842,54 L211.270695,54 L211.242545,54"
                    fill="#FFFFFF"
                  />
                </g>
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-bdVaJa sc-ifAKCX bukoJc"
      >
        <div
          class="sc-bwzfXH sc-EHOje iNBbNz"
        >
          You’ve successfully signed up to RED BOX
        </div>
        <div
          class="sc-bdVaJa sc-gZMcBi hBIkUX"
        >
          <a
            class="linkweb__RespLink-yfb9n-0 cCCShB"
            href="https://home.thetimes.co.uk/myNews"
          >
            <div
              class="sc-bdVaJa sc-jTzLTM kuRCjI"
            >
              <div
                class="sc-bwzfXH sc-gqjmRU jvmtty"
              >
                Manage preferences here
              </div>
              <div
                class="sc-bdVaJa sc-VigVT fqkICi"
              >
                <svg
                  aria-label="icon-forward-arrow"
                  height="12"
                  viewBox="42 12 60 120"
                  width="7"
                >
                  <g
                    fill="#006699"
                  >
                    <path
                      d="M45.8,132L42,128.2,74.8,72,42,15.8,45.8,12,102,72Z"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Inline Newsletter Puff renders null when is already subscribed 1`] = `
<body>
  <div />
</body>
`;

exports[`Inline Newsletter Puff renders placeholder when loading 1`] = `
<body>
  <div>
    <div
      class="sc-bdVaJa sc-htpNat bSdOkq"
      style="height: 257px;"
    >
      <div
        class="css-view-1dbjc4n"
        style="align-items: center; background-color: rgb(237, 237, 237); bottom: 0px; justify-content: center; left: 0px; position: absolute; right: 0px; top: 0px; z-index: 0;"
      >
        <svg
          height="auto"
          style="max-width: 25%; max-height: 50%;"
          version="1.1"
          viewBox="145 50 108 120"
          width="100%"
        >
          <g
            fill="none"
            fill-rule="evenodd"
            stroke="none"
            stroke-width="1"
          >
            <path
              d="M211.26076,54 L211.231367,54 L147.67512,54 L145,85.7081465 L146.922096,86.4489102 C146.922096,86.4489102 164.867589,68.1355181 168.301115,65.0001546 C171.728017,61.8689133 174.237132,61.0885763 176.436179,60.3527593 C180.998206,59.169681 185.977937,59.2150255 185.977937,59.2150255 L186.109581,59.2150255 L186.109581,156.560932 L169.259886,164.473953 L169.259886,166 L228.735147,166 L228.735147,164.473953 L211.889177,156.560932 L211.889177,59.2150255 L212.01751,59.2150255 C212.01751,59.2150255 216.992272,59.169681 221.558854,60.3527593 C223.757072,61.0885763 226.266601,61.8689133 229.691848,65.0001546 C233.130341,68.1355181 251.071695,86.4489102 251.071695,86.4489102 L253,85.7081465 L250.317842,54 L211.270695,54 L211.242545,54"
              fill="#FFFFFF"
            />
          </g>
        </svg>
      </div>
    </div>
  </div>
</body>
`;

exports[`Inline Newsletter Puff renders signup state 1`] = `
<body>
  <div>
    <div
      class="sc-bdVaJa sc-htpNat bSdOkq"
    >
      <div
        class="sc-bdVaJa sc-bxivhb fstdFq"
      >
        <div
          class="css-view-1dbjc4n"
        >
          <div
            style="display: table; height: 0px; overflow: hidden; position: relative; width: 100%; padding-bottom: 70.42253521126761%;"
          >
            <img
              class="responsiveweb-sc-142djdt-0 jYhpic"
              src="https://nuk-tnl-deck-prod-static.s3-eu-west-1.amazonaws.com/uploads/2aa9050e6c3d4de682f11a4802ebba96.jpg"
            />
            <div
              class="css-view-1dbjc4n"
              style="align-items: center; background-color: rgb(237, 237, 237); bottom: 0px; justify-content: center; left: 0px; position: absolute; right: 0px; top: 0px; z-index: 0;"
            >
              <svg
                height="auto"
                style="max-width: 25%; max-height: 50%;"
                version="1.1"
                viewBox="145 50 108 120"
                width="100%"
              >
                <g
                  fill="none"
                  fill-rule="evenodd"
                  stroke="none"
                  stroke-width="1"
                >
                  <path
                    d="M211.26076,54 L211.231367,54 L147.67512,54 L145,85.7081465 L146.922096,86.4489102 C146.922096,86.4489102 164.867589,68.1355181 168.301115,65.0001546 C171.728017,61.8689133 174.237132,61.0885763 176.436179,60.3527593 C180.998206,59.169681 185.977937,59.2150255 185.977937,59.2150255 L186.109581,59.2150255 L186.109581,156.560932 L169.259886,164.473953 L169.259886,166 L228.735147,166 L228.735147,164.473953 L211.889177,156.560932 L211.889177,59.2150255 L212.01751,59.2150255 C212.01751,59.2150255 216.992272,59.169681 221.558854,60.3527593 C223.757072,61.0885763 226.266601,61.8689133 229.691848,65.0001546 C233.130341,68.1355181 251.071695,86.4489102 251.071695,86.4489102 L253,85.7081465 L250.317842,54 L211.270695,54 L211.242545,54"
                    fill="#FFFFFF"
                  />
                </g>
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-bdVaJa sc-bZQynM dZCUeH"
      >
        <div
          class="sc-bwzfXH sc-gzVnrw fwTOvg"
        >
          STRAIGHT IN YOUR INBOX
        </div>
        <div
          class="sc-bwzfXH sc-htoDjs epVajn"
        >
          Politics. Explained.
        </div>
        <div
          class="sc-bwzfXH sc-dnqmqq icKJfC"
        >
          Sign up to receive our brilliant Red Box newsletter, Matt Chorley\`s poke at politics delivered every weekday morning at 8am.
        </div>
        <div
          class="sc-bdVaJa sc-iwsKbI beJMRD"
        >
          <button
            style="font-family: GillSansMTStd-Medium; font-size: 16px; line-height: 0; align-items: center; background-color: transparent; border-radius: 2px; color: rgb(29, 29, 27); cursor: pointer; height: 45px; justify-content: center; min-width: 100px; padding-top: 4px; width: 100%; border-color: #1d1d1b; border-style: solid; border-width: 2px; elevation: 0; letter-spacing: 0.2px;"
            type="button"
          >
            Sign up now
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Inline Newsletter Puff renders signup view when not already subscribed 1`] = `
<body>
  <div>
    <div
      class="sc-bdVaJa sc-htpNat bSdOkq"
    >
      <div
        class="sc-bdVaJa sc-bxivhb fstdFq"
      >
        <div
          class="css-view-1dbjc4n"
        >
          <div
            style="display: table; height: 0px; overflow: hidden; position: relative; width: 100%; padding-bottom: 70.42253521126761%;"
          >
            <img
              class="responsiveweb-sc-142djdt-0 jYhpic"
              src="https://nuk-tnl-deck-prod-static.s3-eu-west-1.amazonaws.com/uploads/2aa9050e6c3d4de682f11a4802ebba96.jpg"
            />
            <div
              class="css-view-1dbjc4n"
              style="align-items: center; background-color: rgb(237, 237, 237); bottom: 0px; justify-content: center; left: 0px; position: absolute; right: 0px; top: 0px; z-index: 0;"
            >
              <svg
                height="auto"
                style="max-width: 25%; max-height: 50%;"
                version="1.1"
                viewBox="145 50 108 120"
                width="100%"
              >
                <g
                  fill="none"
                  fill-rule="evenodd"
                  stroke="none"
                  stroke-width="1"
                >
                  <path
                    d="M211.26076,54 L211.231367,54 L147.67512,54 L145,85.7081465 L146.922096,86.4489102 C146.922096,86.4489102 164.867589,68.1355181 168.301115,65.0001546 C171.728017,61.8689133 174.237132,61.0885763 176.436179,60.3527593 C180.998206,59.169681 185.977937,59.2150255 185.977937,59.2150255 L186.109581,59.2150255 L186.109581,156.560932 L169.259886,164.473953 L169.259886,166 L228.735147,166 L228.735147,164.473953 L211.889177,156.560932 L211.889177,59.2150255 L212.01751,59.2150255 C212.01751,59.2150255 216.992272,59.169681 221.558854,60.3527593 C223.757072,61.0885763 226.266601,61.8689133 229.691848,65.0001546 C233.130341,68.1355181 251.071695,86.4489102 251.071695,86.4489102 L253,85.7081465 L250.317842,54 L211.270695,54 L211.242545,54"
                    fill="#FFFFFF"
                  />
                </g>
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-bdVaJa sc-bZQynM dZCUeH"
      >
        <div
          class="sc-bwzfXH sc-gzVnrw fwTOvg"
        >
          STRAIGHT IN YOUR INBOX
        </div>
        <div
          class="sc-bwzfXH sc-htoDjs epVajn"
        >
          Politics. Explained.
        </div>
        <div
          class="sc-bwzfXH sc-dnqmqq icKJfC"
        >
          Sign up to receive our brilliant Red Box newsletter, Matt Chorley\`s poke at politics delivered every weekday morning at 8am.
        </div>
        <div
          class="sc-bdVaJa sc-iwsKbI beJMRD"
        >
          <button
            style="font-family: GillSansMTStd-Medium; font-size: 16px; line-height: 0; align-items: center; background-color: transparent; border-radius: 2px; color: rgb(29, 29, 27); cursor: pointer; height: 45px; justify-content: center; min-width: 100px; padding-top: 4px; width: 100%; border-color: #1d1d1b; border-style: solid; border-width: 2px; elevation: 0; letter-spacing: 0.2px;"
            type="button"
          >
            Sign up now
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;
